--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install -r test_requirements.txt
+  - pip install -r requirements.txt && pip install -r requirements-dev.txt
 script:
   - ./linters.sh && coverage run --source=flask_logger/ setup.py test
 after_success:
