--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,32 +4,35 @@
 #
 #    pip-compile --output-file requirements-dev.txt requirements-dev.in
 #
-astroid==2.0.4            # via pylint
+--index-url https://yvapi:7TLMoxHM1ueN@pypi.thewardro.be/simple
+--trusted-host pypi.thewardro.be
+
+astroid==2.1.0            # via pylint
 atomicwrites==1.2.1       # via pytest
 attrs==18.2.0             # via pytest
-certifi==2018.10.15       # via requests
+certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
 coverage==4.0.3
 flake8==3.6.0
-idna==2.7                 # via requests
+idna==2.8                 # via requests
 isort==4.3.4
 lazy-object-proxy==1.3.1  # via astroid
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==4.3.0     # via pytest
-pluggy==0.8.0             # via pytest
+more-itertools==5.0.0     # via pytest
+pluggy==0.8.1             # via pytest
 pudb==2018.1
 py==1.7.0                 # via pytest
 pycodestyle==2.4.0
 pyflakes==2.0.0           # via flake8
-pygments==2.2.0           # via pudb
-pylint==2.1.1
-pytest==4.0.0
+pygments==2.3.1           # via pudb
+pylint==2.2.2
+pytest==4.1.1
 python-coveralls==2.9.1
 pyyaml==3.13              # via python-coveralls
-requests==2.20.1          # via python-coveralls
-six==1.11.0               # via astroid, more-itertools, pytest, python-coveralls
-typed-ast==1.1.0          # via astroid
+requests==2.21.0          # via python-coveralls
+six==1.12.0               # via astroid, more-itertools, pytest, python-coveralls
+typed-ast==1.2.0          # via astroid
 urllib3==1.24.1           # via requests
 urwid==2.0.1              # via pudb
 wheel==0.32.3
-wrapt==1.10.11            # via astroid
+wrapt==1.11.0             # via astroid
