--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+--index-url https://yvapi:7TLMoxHM1ueN@pypi.thewardro.be/simple
+--trusted-host pypi.thewardro.be
+
 blinker==1.4              # via sentry-sdk
-certifi==2018.10.15       # via sentry-sdk
+certifi==2018.11.29       # via sentry-sdk
 click==7.0                # via flask
 flask==1.0.2
 itsdangerous==1.1.0       # via flask
 jinja2==2.10              # via flask
 markupsafe==1.1.0         # via jinja2
-sentry-sdk[flask]==0.5.5
+sentry-sdk[flask]==0.6.6
 urllib3==1.24.1           # via sentry-sdk
 werkzeug==0.14.1          # via flask
