--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,6 +13,7 @@ attrs==18.2.0             # via pytest
 certifi==2018.11.29       # via requests
 chardet==3.0.4            # via requests
 coverage==4.0.3
+detect-secrets==0.11.4
 flake8==3.6.0
 idna==2.8                 # via requests
 isort==4.3.4
@@ -28,7 +29,7 @@ pygments==2.3.1           # via pudb
 pylint==2.2.2
 pytest==4.1.1
 python-coveralls==2.9.1
-pyyaml==3.13              # via python-coveralls
+pyyaml==3.13              # via detect-secrets, python-coveralls
 requests==2.21.0          # via python-coveralls
 six==1.12.0               # via astroid, more-itertools, pytest, python-coveralls
 typed-ast==1.2.0          # via astroid
